[gd_scene load_steps=3 format=4 uid="uid://dyqr5vvwk0o22"]

[ext_resource type="Script" path="res://scripts/item_popup.gd" id="1_popup"]
[ext_resource type="FontFile" uid="uid://djsqvbxedlq1x" path="res://fonts/pixelmix.ttf" id="2_font"]

[node name="ItemPopup" type="CanvasLayer"]
layer = 100
script = ExtResource("1_popup")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ItemSprite" type="TextureRect" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
stretch_mode = 5

[node name="ItemName" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "Nome do Item"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ItemDescription" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 8
text = "Descrição do item vai aqui com várias linhas explicando seus poderes e habilidades."
autowrap_mode = 3

[node name="ContinueLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 7
text = "Pressione qualquer tecla para continuar..."
horizontal_alignment = 1
